Fix owner overflow bug in DataContractTotalCard

--- a/packages/frontend/src/components/dataContracts/DataContractTotalCard.scss
+++ b/packages/frontend/src/components/dataContracts/DataContractTotalCard.scss
@@ -18,7 +18,8 @@
     .InfoLine__Value {
       width: 100%;
       text-align: right;
-
+      overflow: hidden;
+      
       .Identifier {
         justify-content: flex-end;
       }
